--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon ./src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
-    "stream-chat": "^8.60.0"
+    "stream-chat": "^9.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
