--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,26 @@
-# Root-level .env
-.env
-
-# Frontend ignores
-frontend/node_modules/
-frontend/.env
-frontend/dist/
-
-# Backend ignores
-backend/node_modules/
-backend/.env
-
-# System files
-.DS_Store
-Thumbs.db
-
 # Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# IDE settings
-.vscode/
-.idea/
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+.env
