--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stream-io/video-react-sdk": "^1.18.1",
     "@tanstack/react-query": "^5.79.0",
     "axios": "^1.9.0",
     "lucide-react": "^0.511.0",
@@ -17,6 +18,9 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router": "^7.6.1",
+    "stream-chat": "^9.3.0",
+    "stream-chat-react": "^13.0.5",
+    "talksphere": "file:..",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
